--- a/public/activities.html
+++ b/public/activities.html
@@ -43,7 +43,7 @@
           <div class="dropdown-menu dropdown-menu-lg dropdown-menu-right">
             <a id="new-activity-btn" class="dropdown-item text-success" data-toggle="modal"
             data-target="#modal-add-activity">
-              <i class="fas fa-seedling mr-2"></i> <span id="tetx-btn-header">เพิ่มกิจกรรมใหม่</span>
+              <i class="fas fa-plus"></i> <span id="tetx-btn-header">เพิ่มกิจกรรมใหม่</span>
             </a>
           </div>
         </li>
@@ -125,7 +125,7 @@
               </a>
             </li>
             <li class="nav-item">
-              <a href="#" class="nav-link" id="navBarPlant">
+              <a href="#" class="nav-link " id="navBarPlant">
                 <i class="fas fa-leaf"></i>
                 <p>
                   &nbsp;&nbsp; จัดการพืช
@@ -134,7 +134,7 @@
             </li>
           </ul>
         </nav>
-        <nav class="mt-2" style="position: absolute; bottom:50px">
+        <nav class="mt-2" style="position: absolute; bottom:1vh">
           <ul class="nav nav-pills nav-sidebar flex-column" data-widget="treeview" role="menu" data-accordion="false">
             <li class="nav-item " id="nav-signout" onclick="signOut()">
               <a href="#logout" class="nav-link text-danger" id="nav-signout">
@@ -144,9 +144,7 @@
                 </p>
               </a>
             </li>
-
           </ul>
-
         </nav>
         <!-- /.sidebar-menu -->
       </div>
