--- a/public/addActivity.html
+++ b/public/addActivity.html
@@ -11,24 +11,17 @@
    <link rel="stylesheet" href="admin-lte/plugins/fontawesome-free/css/all.min.css">
    <!-- Ionicons -->
    <link rel="stylesheet" href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
-   <!-- Tempusdominus Bbootstrap 4 -->
-   <link rel="stylesheet" href="admin-lte/plugins/tempusdominus-bootstrap-4/css/tempusdominus-bootstrap-4.min.css">
-   <!-- iCheck -->
-   <link rel="stylesheet" href="admin-lte/plugins/icheck-bootstrap/icheck-bootstrap.min.css">
-   <!-- JQVMap -->
-   <link rel="stylesheet" href="admin-lte/plugins/jqvmap/jqvmap.min.css">
-   <!-- Theme style -->
-   <link rel="stylesheet" href="admin-lte/dist/css/adminlte.min.css">
    <!-- overlayScrollbars -->
-   <link rel="stylesheet" href="admin-lte/plugins/overlayScrollbars/css/OverlayScrollbars.min.css">
+   <link rel="stylesheet" href="admin-lte/dist/css/adminlte.min.css">
+   <!-- Google Font: Source Sans Pro -->
+   <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700" rel="stylesheet">
+
    <!-- Daterange picker -->
    <link href="css/datepicker.css" rel="stylesheet" media="screen">
    <link href="//getbootstrap.com/2.3.2/assets/js/google-code-prettify/prettify.css" rel="stylesheet">
    <link href="//getbootstrap.com/2.3.2/assets/css/bootstrap-responsive.css" rel="stylesheet">
-   <!-- summernote -->
-   <link rel="stylesheet" href="admin-lte/plugins/summernote/summernote-bs4.css">
-   <!-- Google Font: Source Sans Pro -->
-   <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700" rel="stylesheet">
+
+   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
    <!-- Select2 -->
    <link rel="stylesheet" href="admin-lte/plugins/select2/css/select2.min.css">
    <link rel="stylesheet" href="admin-lte/plugins/select2-bootstrap4-theme/select2-bootstrap4.min.css">
@@ -45,35 +38,35 @@
  <body class="hold-transition sidebar-mini layout-fixed">
    <div class="wrapper">
      <nav class="main-header navbar navbar-expand navbar-white navbar-light" id="topnav">
-      <ul class="navbar-nav">
-        <li class="nav-item" id="hamburger" style="display: none;">
-          <a class="nav-link" data-widget="pushmenu" href="#"><i class="fas fa-bars"></i></a>
-        </li>
-        <li class="nav-item" id="back-report" onclick="window.history.back()" >
-          <a class="nav-link"><i class="fa fa-arrow-left"></i></a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link">
-            <p id="rightHeaderText">กิจกรรมใหม่</p>
-          </a>
-        </li>
-      </ul>
-      <ul class="navbar-nav ml-auto">
-        <li class="nav-item dropdown">
-          <a class="nav-link" data-toggle="dropdown" aria-expanded="true">
-            <i class="fas fa-th-large"></i>
-          </a>
-          <div class="dropdown-menu dropdown-menu-lg dropdown-menu-right">
-            <a id="activity-progress-btn" class="dropdown-item text-success" data-toggle="modal"  onclick="postToDatabase()">
-              <i class="fas fa-seedling mr-2"></i> <span id="tetx-btn-header">บันทึก</span>
-            </a>
-            <a id="cancelBtn" class="dropdown-item text-danger" data-toggle="modal" onclick="clearField()">
-              <i class="fas fa-seedling mr-2"></i> <span id="tetx-btn-header">ยกเลิก</span>
-            </a>
-          </div>
-        </li>
-      </ul>
-    </nav>
+       <ul class="navbar-nav">
+         <li class="nav-item" id="hamburger" style="display: none;">
+           <a class="nav-link" data-widget="pushmenu" href="#"><i class="fas fa-bars"></i></a>
+         </li>
+         <li class="nav-item" id="back-report" onclick="window.history.back()">
+           <a class="nav-link"><i class="fa fa-arrow-left"></i></a>
+         </li>
+         <li class="nav-item">
+           <a class="nav-link">
+           </a>
+         </li>
+       </ul>
+       <ul class="navbar-nav ml-auto">
+         <li class="nav-item dropdown">
+           <a class="nav-link" data-toggle="dropdown" aria-expanded="true">
+             <i class="fas fa-th-large"></i>
+           </a>
+           <div class="dropdown-menu dropdown-menu-lg dropdown-menu-right">
+             <a id="activity-progress-btn" class="dropdown-item text-success" data-toggle="modal"
+               onclick="postToDatabase()">
+               <i class="fas fa-seedling mr-2"></i> <span id="tetx-btn-header">บันทึก</span>
+             </a>
+             <a id="cancelBtn" class="dropdown-item text-danger" data-toggle="modal" onclick="window.history.back()">
+               <i class="fas fa-seedling mr-2"></i> <span id="tetx-btn-header">ยกเลิก</span>
+             </a>
+           </div>
+         </li>
+       </ul>
+     </nav>
      <!-- /.navbar -->
 
      <!-- Main Sidebar Container -->
@@ -96,8 +89,8 @@
          <!-- Sidebar user panel (optional) -->
          <div class="user-panel mt-3 pb-3 mb-3 d-flex">
            <!-- <div class="image">
-                <i ></i>
-              </div> -->
+            <i ></i>
+          </div> -->
            <div class="info">
              <p id="nav-user-name" href="#" class="d-block">ยินดีต้อนรับ </p>
            </div>
@@ -107,7 +100,7 @@
          <nav class="mt-2">
            <ul class="nav nav-pills nav-sidebar flex-column" data-widget="treeview" role="menu" data-accordion="false">
              <!-- Add icons to the links using the .nav-icon class
-                     with font-awesome or any other icon font library -->
+                 with font-awesome or any other icon font library -->
              <li class="nav-item">
                <a href="index.html" class="nav-link" id="navBarLand">
                  <i class="fas fa-map-marked-alt"></i>
@@ -150,7 +143,7 @@
                </a>
              </li>
              <li class="nav-item">
-               <a href="#" class="nav-link" id="navBarPlant">
+               <a href="#" class="nav-link " id="navBarPlant">
                  <i class="fas fa-leaf"></i>
                  <p>
                    &nbsp;&nbsp; จัดการพืช
@@ -159,7 +152,7 @@
              </li>
            </ul>
          </nav>
-         <nav class="mt-2" style="position: absolute; bottom:50px">
+         <nav class="mt-2" style="position: absolute; bottom:1vh">
            <ul class="nav nav-pills nav-sidebar flex-column" data-widget="treeview" role="menu" data-accordion="false">
              <li class="nav-item " id="nav-signout" onclick="signOut()">
                <a href="#logout" class="nav-link text-danger" id="nav-signout">
@@ -169,48 +162,46 @@
                  </p>
                </a>
              </li>
-
            </ul>
-
          </nav>
          <!-- /.sidebar-menu -->
        </div>
        <!-- /.sidebar -->
      </aside>
-
      <!-- Content Wrapper. Contains page content -->
      <div class="content-wrapper">
        <section class="content-header right-header-btn">
-        <nav class="navbar navbar-expand navbar-white navbar-light">
-          <ul class="navbar-nav text-success">
-            <li id="header-activity-detail">
-              <h4>
-                <span class="mobile-v-header" onclick="window.history.back()" style="cursor: pointer;"><i
-                    class="fa fa-arrow-left"></i>&nbsp;&nbsp;</span>
-                <span id="leftHeaderText" class="max-v-header" onclick="window.history.back()" style="cursor: pointer;">กิจกรรมทั้งหมด&nbsp;&nbsp;<i
-                    class="fa fa-angle-right"></i>&nbsp;&nbsp;</span>
-              </h4>
-            </li>
-            <li>
-            </li>
-            <li>
-              <h4 id="rightHeaderText"> กิจกรรมใหม่</h4>
-            </li>
-          </ul>
-          <ul class="navbar-nav ml-auto right-header-btn">
-            <li class="nav-item">
-              <button id="cancelBtn" class="btn btn-primary" onclick="clearField()"><span
-                  id="tetx-btn-header">ยกเลิก</span></button>
-            </li>
-            <li class="nav-item">&nbsp;</li>
-            <li class="nav-item">
-              <button id="activity-progress-btn" class="btn bg-olive" onclick="postToDatabase()"><span
-                id="saveBtn">บันทึก</span></button>
-            </li>
-          </ul>
-        </nav>
-        <hr>
-      </section>
+         <nav class="navbar navbar-expand navbar-white navbar-light">
+           <ul class="navbar-nav text-success">
+             <li id="header-activity-detail">
+               <h4>
+                 <span class="mobile-v-header" onclick="window.history.back()" style="cursor: pointer;"><i
+                     class="fa fa-arrow-left"></i>&nbsp;&nbsp;</span>
+                 <span id="leftHeaderText" class="max-v-header" onclick="window.history.back()"
+                   style="cursor: pointer;">กิจกรรมทั้งหมด&nbsp;&nbsp;<i
+                     class="fa fa-angle-right"></i>&nbsp;&nbsp;</span>
+               </h4>
+             </li>
+             <li>
+             </li>
+             <li>
+               <h4 id="rightHeaderText"> กิจกรรมใหม่</h4>
+             </li>
+           </ul>
+           <ul class="navbar-nav ml-auto right-header-btn">
+             <li class="nav-item">
+               <button id="cancelBtn" class="btn btn-primary" onclick="window.history.back()"><span
+                   id="tetx-btn-header">ยกเลิก</span></button>
+             </li>
+             <li class="nav-item">&nbsp;</li>
+             <li class="nav-item">
+               <button id="activity-progress-btn" class="btn bg-olive" onclick="postToDatabase()"><span
+                   id="saveBtn">บันทึก</span></button>
+             </li>
+           </ul>
+         </nav>
+         <hr>
+       </section>
        <section class="content">
          <div class="container-fluid">
            <div id="addActivity">
@@ -262,7 +253,18 @@
              </form>
            </div>
            </form>
-         </div><!-- /.container-fluid -->
+           <div id="add-can-mobil-div">
+             <div class="row">
+               <div class="col-6" style="text-align: center;">
+                 <button id="cancelBtn" class="btn btn-primary" onclick="window.history.back()"><span
+                     id="tetx-btn-header">ยกเลิก</span></button>
+               </div>
+               <div class="col-6" style="text-align: center;"> <button id="activity-progress-btn" class="btn bg-olive"
+                   onclick="postToDatabase()"><span id="saveBtn">บันทึก</span></button></div>
+
+             </div>
+           </div>
+         </div>
        </section>
      </div>
    </div>
@@ -302,38 +304,24 @@
 
    <!-- jQuery -->
    <script src="admin-lte/plugins/jquery/jquery.min.js"></script>
-   <!-- jQuery UI 1.11.4 -->
-   <script src="admin-lte/plugins/jquery-ui/jquery-ui.min.js"></script>
-   <!-- Resolve conflict in jQuery UI tooltip with Bootstrap tooltip -->
-   <script>
-     $.widget.bridge('uibutton', $.ui.button)
-
-   </script>
    <!-- Bootstrap 4 -->
    <script src="admin-lte/plugins/bootstrap/js/bootstrap.bundle.min.js"></script>
-   <!-- ChartJS -->
-   <script src="admin-lte/plugins/chart.js/Chart.min.js"></script>
-   <!-- Sparkline -->
-   <script src="admin-lte/plugins/sparklines/sparkline.js"></script>
-   <!-- JQVMap -->
-   <script src="admin-lte/plugins/jqvmap/jquery.vmap.min.js"></script>
-   <script src="admin-lte/plugins/jqvmap/maps/jquery.vmap.usa.js"></script>
-   <!-- jQuery Knob Chart -->
-   <script src="admin-lte/plugins/jquery-knob/jquery.knob.min.js"></script>
+   <!-- AdminLTE App -->
+   <script src="admin-lte/dist/js/adminlte.min.js"></script>
+   <!-- AdminLTE for demo purposes -->
+   <script src="admin-lte/dist/js/demo.js"></script>
+
+
+   <!-- AdminLTE for demo purposes -->
+   <script src="admin-lte/dist/js/demo.js"></script>
    <!-- daterangepicker -->
    <script src="admin-lte/plugins/moment/moment.min.js"></script>
+   <script src="admin-lte/plugins/daterangepicker/daterangepicker.js"></script>
+
    <!-- <script src="plugins/daterangepicker/daterangepicker.js"></script> -->
    <script src="admin-lte/build/js/bootstrap-datepicker.js"></script>
    <script src="admin-lte/build/js/bootstrap-datepicker-thai.js"></script>
    <script src="admin-lte/build/js/locales/bootstrap-datepicker.th.js"></script>
-   <!-- Tempusdominus Bootstrap 4 -->
-   <script src="admin-lte/plugins/tempusdominus-bootstrap-4/js/tempusdominus-bootstrap-4.min.js"></script>
-   <!-- Summernote -->
-   <script src="admin-lte/plugins/summernote/summernote-bs4.min.js"></script>
-   <!-- overlayScrollbars -->
-   <script src="admin-lte/plugins/overlayScrollbars/js/jquery.overlayScrollbars.min.js"></script>
-   <!-- AdminLTE App -->
-   <script src="admin-lte/dist/js/adminlte.js"></script>
 
    <!-- Select2 -->
    <script src="admin-lte/plugins/select2/js/select2.full.min.js"></script>
@@ -352,7 +340,6 @@
          theme: 'bootstrap4'
        })
      }
-
    </script>
 
    <script type="text/javascript">
@@ -378,7 +365,6 @@
        });
        demo();
      });
-
    </script>
 
  </body>
