--- a/public/calendar.html
+++ b/public/calendar.html
@@ -83,9 +83,7 @@
               </a>
             </li>
             <li class="nav-item">
-
-              <a href="#" class="nav-link  active" id="navBarSchedule">
-
+              <a href="calendar.html" class="nav-link active" id="navBarSchedule">
                 <i class="fas fa-calendar-alt"></i>
                 <p>
                   &nbsp;&nbsp; ตารางงาน
@@ -93,9 +91,7 @@
               </a>
             </li>
             <li class="nav-item">
-
-              <a href="activities.html" class="nav-link" id="navBarActivity">
-
+              <a href="#" class="nav-link " id="navBarActivity">
                 <i class="fas fa-list-alt"></i>
                 <p>
                   &nbsp;&nbsp; กิจกรรมทั้งหมด
@@ -111,7 +107,6 @@
               </a>
             </li>
             <li class="nav-item">
-
               <a href="#" class="nav-link" id="navBarManager">
 
                 <i class="fas fa-users"></i>
@@ -121,7 +116,7 @@
               </a>
             </li>
             <li class="nav-item">
-              <a href="#" class="nav-link" id="navBarPlant">
+              <a href="#" class="nav-link " id="navBarPlant">
                 <i class="fas fa-leaf"></i>
                 <p>
                   &nbsp;&nbsp; จัดการพืช
@@ -130,7 +125,7 @@
             </li>
           </ul>
         </nav>
-        <nav class="mt-2" style="position: absolute; bottom:50px">
+        <nav class="mt-2" style="position: absolute; bottom:1vh">
           <ul class="nav nav-pills nav-sidebar flex-column" data-widget="treeview" role="menu" data-accordion="false">
             <li class="nav-item " id="nav-signout" onclick="signOut()">
               <a href="#logout" class="nav-link text-danger" id="nav-signout">
@@ -140,9 +135,7 @@
                 </p>
               </a>
             </li>
-
           </ul>
-
         </nav>
         <!-- /.sidebar-menu -->
       </div>
