--- a/public/index.html
+++ b/public/index.html
@@ -95,7 +95,7 @@
     <!-- /.navbar -->
 
     <!-- Main Sidebar Container -->
-    <aside id="aside" class="main-sidebar sidebar-light-primary elevation-4">
+    <aside class="main-sidebar sidebar-light-primary elevation-4">
       <!-- Brand Logo -->
       <a id="sidebar-brand-logo" href="index.html" class="brand-link">
         <table>
@@ -114,8 +114,8 @@
         <!-- Sidebar user panel (optional) -->
         <div class="user-panel mt-3 pb-3 mb-3 d-flex">
           <!-- <div class="image">
-          <i ></i>
-        </div> -->
+            <i ></i>
+          </div> -->
           <div class="info">
             <p id="nav-user-name" href="#" class="d-block">ยินดีต้อนรับ </p>
           </div>
@@ -125,9 +125,9 @@
         <nav class="mt-2">
           <ul class="nav nav-pills nav-sidebar flex-column" data-widget="treeview" role="menu" data-accordion="false">
             <!-- Add icons to the links using the .nav-icon class
-               with font-awesome or any other icon font library -->
+                 with font-awesome or any other icon font library -->
             <li class="nav-item">
-              <a href="#" class="nav-link active" id="navBarLand">
+              <a href="index.html" class="nav-link active" id="navBarLand">
                 <i class="fas fa-map-marked-alt"></i>
                 <p>
                   &nbsp;&nbsp; ที่ดิน
@@ -135,7 +135,7 @@
               </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" id="navBarSchedule">
+              <a href="calendar.html" class="nav-link" id="navBarSchedule">
                 <i class="fas fa-calendar-alt"></i>
                 <p>
                   &nbsp;&nbsp; ตารางงาน
@@ -143,7 +143,7 @@
               </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" id="navBarActivity">
+              <a href="#" class="nav-link" id="navBarActivity">
                 <i class="fas fa-list-alt"></i>
                 <p>
                   &nbsp;&nbsp; กิจกรรมทั้งหมด
@@ -151,7 +151,7 @@
               </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" id="navBarReport">
+              <a href="#" class="nav-link" id="navBarReport">
                 <i class="fas fa-chart-bar"></i>
                 <p>
                   &nbsp;&nbsp; รายงานผล
@@ -159,8 +159,7 @@
               </a>
             </li>
             <li class="nav-item">
-
-              <a href="#" class="nav-link" id="navBarManager">
+              <a href="#" class="nav-link " id="navBarManager">
 
                 <i class="fas fa-users"></i>
                 <p>
@@ -169,7 +168,7 @@
               </a>
             </li>
             <li class="nav-item">
-              <a href="#" class="nav-link" id="navBarPlant">
+              <a href="#" class="nav-link " id="navBarPlant">
                 <i class="fas fa-leaf"></i>
                 <p>
                   &nbsp;&nbsp; จัดการพืช
@@ -178,7 +177,7 @@
             </li>
           </ul>
         </nav>
-        <nav class="mt-2" style="position: absolute; bottom:50px">
+        <nav class="mt-2" style="position: absolute; bottom:5vh">
           <ul class="nav nav-pills nav-sidebar flex-column" data-widget="treeview" role="menu" data-accordion="false">
             <li class="nav-item " id="nav-signout" onclick="signOut()">
               <a href="#logout" class="nav-link text-danger" id="nav-signout">
@@ -188,9 +187,7 @@
                 </p>
               </a>
             </li>
-
           </ul>
-
         </nav>
         <!-- /.sidebar-menu -->
       </div>
