--- a/public/managers.html
+++ b/public/managers.html
@@ -8,27 +8,15 @@
   <!-- Tell the browser to be responsive to screen width -->
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- Font Awesome -->
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <!-- Font Awesome -->
   <link rel="stylesheet" href="admin-lte/plugins/fontawesome-free/css/all.min.css">
   <!-- Ionicons -->
   <link rel="stylesheet" href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
-  <!-- Tempusdominus Bbootstrap 4 -->
-  <link rel="stylesheet" href="admin-lte/plugins/tempusdominus-bootstrap-4/css/tempusdominus-bootstrap-4.min.css">
-  <!-- iCheck -->
-  <link rel="stylesheet" href="admin-lte/plugins/icheck-bootstrap/icheck-bootstrap.min.css">
-  <!-- JQVMap -->
-  <link rel="stylesheet" href="admin-lte/plugins/jqvmap/jqvmap.min.css">
-  <!-- Theme style -->
-  <link rel="stylesheet" href="admin-lte/dist/css/adminlte.min.css">
   <!-- overlayScrollbars -->
-  <link rel="stylesheet" href="admin-lte/plugins/overlayScrollbars/css/OverlayScrollbars.min.css">
-  <!-- Daterange picker -->
-  <link rel="stylesheet" href="admin-lte/plugins/daterangepicker/daterangepicker.css">
-  <!-- summernote -->
-  <link rel="stylesheet" href="admin-lte/plugins/summernote/summernote-bs4.css">
+  <link rel="stylesheet" href="admin-lte/dist/css/adminlte.min.css">
   <!-- Google Font: Source Sans Pro -->
   <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700" rel="stylesheet">
-
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 
   <!-- PROPLANTE -->
   <link rel="stylesheet" href="css/circleImageProfile.css" />
@@ -37,6 +25,8 @@
   <link rel="stylesheet" href="css/addActivityPage.css">
   <link rel="stylesheet" href="css/loader-1.css">
   <link rel="stylesheet" href="css/allelements.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+
 
 </head>
 
@@ -48,6 +38,14 @@
       <ul class="navbar-nav">
         <li class="nav-item" id="hamburger">
           <a class="nav-link" data-widget="pushmenu" href="#"><i class="fas fa-bars"></i></a>
+        </li>
+        <li class="nav-item" id="back-nav" onclick="history.back()" style="display: none;">
+          <a class="nav-link"><i class="fa fa-arrow-left"></i></a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link">
+            <p id="extend-header"></p>
+          </a>
         </li>
       </ul>
       <ul class="navbar-nav ml-auto">
@@ -141,6 +139,7 @@
             </li>
             <li class="nav-item">
               <a href="#" class="nav-link active" id="navBarManager">
+
                 <i class="fas fa-users"></i>
                 <p>
                   &nbsp;&nbsp;&nbsp; ผู้ดูแล
@@ -148,7 +147,7 @@
               </a>
             </li>
             <li class="nav-item">
-              <a href="%id=456" class="nav-link" id="navBarPlant">
+              <a href="#" class="nav-link " id="navBarPlant">
                 <i class="fas fa-leaf"></i>
                 <p>
                   &nbsp;&nbsp; จัดการพืช
@@ -157,7 +156,7 @@
             </li>
           </ul>
         </nav>
-        <nav class="mt-2" style="position: absolute; bottom:50px">
+        <nav class="mt-2" style="position: absolute; bottom:1vh">
           <ul class="nav nav-pills nav-sidebar flex-column" data-widget="treeview" role="menu" data-accordion="false">
             <li class="nav-item " id="nav-signout" onclick="signOut()">
               <a href="#logout" class="nav-link text-danger" id="nav-signout">
@@ -167,9 +166,7 @@
                 </p>
               </a>
             </li>
-
           </ul>
-
         </nav>
         <!-- /.sidebar-menu -->
       </div>
@@ -326,6 +323,29 @@
   </div>
   <!-- MODAL -->
 
+  <!-- jQuery -->
+  <script src="admin-lte/plugins/jquery/jquery.min.js"></script>
+  <!-- Bootstrap 4 -->
+  <script src="admin-lte/plugins/bootstrap/js/bootstrap.bundle.min.js"></script>
+  <!-- AdminLTE App -->
+  <script src="admin-lte/dist/js/adminlte.min.js"></script>
+  <!-- AdminLTE for demo purposes -->
+  <script src="admin-lte/dist/js/demo.js"></script>
+
+    <!-- InputMask -->
+    <script src="admin-lte/plugins/moment/moment.min.js"></script>
+    <script src="admin-lte/plugins/inputmask/min/jquery.inputmask.bundle.min.js"></script>
+
+
+    <!-- AdminLTE for demo purposes -->
+    <script src="admin-lte/dist/js/demo.js"></script>
+    <!-- firebase -->
+    <script>
+       $('[data-mask]').inputmask()
+  // $.widget.bridge('uibutton', $.ui.button)
+
+       </script>
+
   <!-- PROPLANTE -->
   <!-- firebase -->
   <script src="https://www.gstatic.com/firebasejs/live/3.0/firebase.js"></script>
@@ -336,40 +356,6 @@
   <script src="js/navBarLinks.js"></script>
   <script src="js/mutilplePageunction.js"></script>
   <script src="js/managersFunc.js"></script>
-
-
-  <!-- jQuery -->
-  <script src="admin-lte/plugins/jquery/jquery.min.js"></script>
-  <!-- jQuery UI 1.11.4 -->
-  <script src="admin-lte/plugins/jquery-ui/jquery-ui.min.js"></script>
-  <!-- Resolve conflict in jQuery UI tooltip with Bootstrap tooltip -->
-  <!-- Bootstrap 4 -->
-  <script src="admin-lte/plugins/bootstrap/js/bootstrap.bundle.min.js"></script>
-  <!-- JQVMap -->
-  <script src="admin-lte/plugins/jqvmap/jquery.vmap.min.js"></script>
-  <script src="admin-lte/plugins/jqvmap/maps/jquery.vmap.usa.js"></script>
-  <!-- jQuery Knob Chart -->
-  <script src="admin-lte/plugins/jquery-knob/jquery.knob.min.js"></script>
-  <!-- daterangepicker -->
-  <script src="admin-lte/plugins/moment/moment.min.js"></script>
-  <script src="admin-lte/plugins/daterangepicker/daterangepicker.js"></script>
-  <!-- Tempusdominus Bootstrap 4 -->
-  <script src="admin-lte/plugins/tempusdominus-bootstrap-4/js/tempusdominus-bootstrap-4.min.js"></script>
-  <!-- InputMask -->
-  <script src="admin-lte/plugins/moment/moment.min.js"></script>
-  <script src="admin-lte/plugins/inputmask/min/jquery.inputmask.bundle.min.js"></script>
-  <script>
-    $('[data-mask]').inputmask()
-  $.widget.bridge('uibutton', $.ui.button)
-</script>
-  <!-- Summernote -->
-  <script src="admin-lte/plugins/summernote/summernote-bs4.min.js"></script>
-  <!-- overlayScrollbars -->
-  <script src="admin-lte/plugins/overlayScrollbars/js/jquery.overlayScrollbars.min.js"></script>
-  <!-- AdminLTE App -->
-  <script src="admin-lte/dist/js/adminlte.js"></script>
-  <!-- AdminLTE for demo purposes -->
-  <script src="admin-lte/dist/js/demo.js"></script>
 
 
 </body>
