fix manager role

--- a/public/activitydetails.html
+++ b/public/activitydetails.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>Proplante | รายละเอียดกิจกกรม</title>
+  <title>Proplante | รายละเอียดกิจกรรม</title>
   <!-- Tell the browser to be responsive to screen width -->
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- Font Awesome -->
@@ -32,8 +32,8 @@
         <li class="nav-item" id="hamburger" style="display: none;">
           <a class="nav-link" data-widget="pushmenu" href="#"><i class="fas fa-bars"></i></a>
         </li>
-        <li class="nav-item" id="back-report" onclick="window.history.back()">
-          <a class="nav-link"><i class="fa fa-arrow-left"></i></a>
+        <li class="nav-item" id="back-report">
+          <a class="nav-link" href="activities.html"><i class="fa fa-arrow-left"></i></a>
         </li>
         <li class="nav-item">
           <a class="nav-link">
