--- a/public/addActivity.html
+++ b/public/addActivity.html
@@ -220,7 +220,7 @@
                      </span>
                    </div>
                    <input type="text" class="form-control float-right input-medium" id="reservation"
-                     data-provide="datepicker" data-date-language="th-th">
+                     data-provide="datepicker" data-date-language="th-th" onfocus="blur();">
                  </div>
                  <!-- /.input group -->
                </div>
