--- a/public/landDetail.html
+++ b/public/landDetail.html
@@ -358,7 +358,7 @@
                       </span>
                     </div>
                     <input required type="text" class="form-control float-right input-medium" id="harvested-date"
-                      data-provide="datepicker" data-date-language="th-th">
+                      data-provide="datepicker" data-date-language="th-th" onfocus="blur();">
                   </div>
                   <!-- /.input group -->
                 </div>
@@ -413,7 +413,7 @@
                     </span>
                   </div>
                   <input required type="text" class="form-control float-right input-medium" id="start-date"
-                    data-provide="datepicker" data-date-language="th-th">
+                    data-provide="datepicker" data-date-language="th-th" onfocus="blur();">
                 </div>
                 <!-- /.input group -->
               </div>
