--- a/public/managers.html
+++ b/public/managers.html
@@ -239,7 +239,7 @@
                 <div class="dashes"></div>
                 <label>คลิกเพื่อเลือกรูปภาพ หรือลากรูปภาพมาวางที่นี่</label>
               </div>
-              <input type="file" id="mediaFile" />
+              <input type="file" id="mediaFile" accept="image/*"/>
             </div>
             <div class="input-group mb-3">
               <input required id="name-manager-input" type="text" class="form-control" placeholder="ชื่อ" />
