--- a/public/plantPage.html
+++ b/public/plantPage.html
@@ -245,7 +245,7 @@
                 <div class="input-group" style="text-align:center;">
                   <output id="result" style="width: 100%;"></output>
                   </output>
-                  <div id="input-plant-image" style="width: 100%;"> <input id="pictureInput" type="file" />
+                  <div id="input-plant-image" style="width: 100%;"> <input id="pictureInput" type="file" accept="image/*"/>
                     <label id="labelInputFile" for="pictureInput">อัปโหลดรูปภาพ</label>
                   </div>
                 </div>
