--- a/public/register.html
+++ b/public/register.html
@@ -108,7 +108,7 @@
                 <div class="dashes"></div>
                 <label>คลิกเพื่อเลือกรูปภาพ หรือลากรูปภาพมาวางที่นี่</label>
               </div>
-              <input type="file" id="mediaFile" />
+              <input type="file" id="mediaFile" accept="image/*"/>
               </div>
               <div class="input-group mb-3">
                 <input required id="code-manager-input" type="text" class="form-control" placeholder="รหัสผู้ดูแล" />
