--- a/public/addActivity.html
+++ b/public/addActivity.html
@@ -22,6 +22,8 @@
    <link href="//getbootstrap.com/2.3.2/assets/css/bootstrap-responsive.css" rel="stylesheet">
 
    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+   <script src="js/load-image.all.min.js"></script>
+
    <!-- Select2 -->
    <link rel="stylesheet" href="admin-lte/plugins/select2/css/select2.min.css">
    <link rel="stylesheet" href="admin-lte/plugins/select2-bootstrap4-theme/select2-bootstrap4.min.css">
@@ -50,22 +52,7 @@
            </a>
          </li>
        </ul>
-       <ul class="navbar-nav ml-auto">
-         <li class="nav-item dropdown">
-           <a class="nav-link" data-toggle="dropdown" aria-expanded="true">
-             <i class="fas fa-th-large"></i>
-           </a>
-           <div class="dropdown-menu dropdown-menu-lg dropdown-menu-right">
-             <a id="activity-progress-btn" class="dropdown-item text-success" data-toggle="modal"
-               onclick="postToDatabase()">
-               <i class="fas fa-seedling mr-2"></i> <span id="tetx-btn-header">บันทึก</span>
-             </a>
-             <a id="cancelBtn" class="dropdown-item text-danger" data-toggle="modal" onclick="window.history.back()">
-               <i class="fas fa-seedling mr-2"></i> <span id="tetx-btn-header">ยกเลิก</span>
-             </a>
-           </div>
-         </li>
-       </ul>
+
      </nav>
      <!-- /.navbar -->
 
@@ -227,7 +214,7 @@
 
                <div class="form-group">
                  <label for="inputActivityName">สถานะ</label>
-                 <select id="activityStatus" class="form-control select2bs4 select2-hidden-accessible"
+                 <select id="activityStatus" class="custom-select"
                    style="width: 100%;" data-select2-id="17" tabindex="-1" aria-hidden="true">
                    <option selected="selected" data-select2-id="doneStatus">เสร็จแล้ว</option>
                    <option data-select2-id="inProgressStatus">กำลังดำเนินการ</option>
@@ -246,7 +233,7 @@
                  <div class="input-group">
                    <output id="result"></output>
                    </output>
-                   <input id="pictureInput" type="file" multiple />
+                   <input id="pictureInput" type="file" multiple accept="image/*" />
                    <label id="labelInputFile" for="pictureInput">อัปโหลดรูปภาพ</label>
                  </div>
                </div>
@@ -254,17 +241,12 @@
            </div>
            </form>
            <div id="add-can-mobil-div">
-             <div class="row">
-               <div class="col-6" style="text-align: center;">
-                 <button id="cancelBtn" class="btn btn-primary" onclick="window.history.back()"><span
-                     id="tetx-btn-header">ยกเลิก</span></button>
-               </div>
-               <div class="col-6" style="text-align: center;"> <button id="activity-progress-btn" class="btn bg-olive"
-                   onclick="postToDatabase()"><span id="saveBtn">บันทึก</span></button></div>
 
-             </div>
+             <div style="text-align: center; margin-top: 10vh;">
+               <button id="activity-progress-btn" class="btn bg-olive" style="width: 90%;" onclick="postToDatabase()"><span
+                   id="saveBtn">บันทึก</span></span></div>
+
            </div>
-         </div>
        </section>
      </div>
    </div>
