--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>Proplante</title>
   <!-- Tell the browser to be responsive to screen width -->
+  <link rel="icon" href="images/icon.png" type="image/icon type">
+
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- Font Awesome -->
   <link rel="stylesheet" href="admin-lte/plugins/fontawesome-free/css/all.min.css">
@@ -13,6 +15,8 @@
   <link rel="stylesheet" href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
   <!-- Tempusdominus Bbootstrap 4 -->
   <link rel="stylesheet" href="admin-lte/plugins/tempusdominus-bootstrap-4/css/tempusdominus-bootstrap-4.min.css">
+  <!-- iCheck -->
+  <link rel="stylesheet" href="admin-lte/plugins/icheck-bootstrap/icheck-bootstrap.min.css">
   <!-- JQVMap -->
   <link rel="stylesheet" href="admin-lte/plugins/jqvmap/jqvmap.min.css">
   <!-- Theme style -->
@@ -25,11 +29,12 @@
   <link rel="stylesheet" href="admin-lte/plugins/summernote/summernote-bs4.css">
   <!-- Google Font: Source Sans Pro -->
   <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Sarabun&display=swap" rel="stylesheet">
+
   <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/0.4.1/html2canvas.js"></script>
   <!-- PROPLANTE -->
   <link rel="stylesheet" href="css/allelements.css">
   <link rel="stylesheet" href="css/MainPage.css">
-  <link rel="stylesheet" href="css/loader-1.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 
 </head>
@@ -37,7 +42,7 @@
 <body class="hold-transition sidebar-mini layout-fixed">
   <div class="wrapper">
     <!-- Navbar -->
-    <nav class="main-header navbar navbar-expand navbar-white navbar-light" style="margin-bottom:0px; ">
+    <nav class="main-header navbar navbar-expand navbar-white navbar-light" style="margin-bottom:0px;">
       <!-- Left navbar links -->
       <ul class="navbar-nav">
         <li class="nav-item" id="hamburger">
@@ -47,13 +52,13 @@
       </ul>
       <ul class="navbar-nav ml-auto">
         <li class="nav-item">
-          <a class="nav-link" data-widget="control-sidebar" data-slide="true" href="#" id="filterButton"><i
-              class="fa fa-filter"></i></a>
+          <a class="nav-link" id="filterButton">
+            <i class="fa fa-filter"></i></a>
         </li>
         <div id="filterMainPageDiv">
           <div class="dropdown" id="dropdown-main">
-            <button id="provice-filter" class="btn btn-primary dropdown-toggle land-filter" data-toggle="dropdown" aria-expanded="false">
-              <!-- <input  type="button" value="จังหวัด"> -->
+            <button id="provice-filter" class="btn btn-primary dropdown-toggle land-filter" data-toggle="dropdown"
+              aria-expanded="false">
               จังหวัด
             </button>
             <div class="dropdown-menu" role="menu" id="provice-dropdown">
@@ -61,8 +66,8 @@
             </div>
           </div>
           <div class="dropdown" id="dropdown-main">
-            <button disabled id="district-filter" class="btn btn-primary dropdown-toggle land-filter" data-toggle="dropdown" aria-expanded="false">
-              <!-- <input  type="button" value="อำเภอ" disabled> -->
+            <button disabled id="district-filter" class="btn btn-primary dropdown-toggle land-filter"
+              data-toggle="dropdown" aria-expanded="false">
               อำเภอ
             </button>
             <div class="dropdown-menu" role="menu" id="district-dropdown">
@@ -70,8 +75,8 @@
             </div>
           </div>
           <div class="dropdown" id="dropdown-main">
-            <button id="land-name-filter" class="btn btn-primary dropdown-toggle land-filter" data-toggle="dropdown" aria-expanded="false">
-              <!-- <input  type="button" value="ที่ดิน"> -->
+            <button id="land-name-filter" class="btn btn-primary dropdown-toggle land-filter" data-toggle="dropdown"
+              aria-expanded="false">
               ที่ดิน
             </button>
             <div class="dropdown-menu" role="menu" id="land-dropdown">
@@ -80,15 +85,14 @@
           </div>
 
           <div class="dropdown" id="dropdown-main">
-            <button id="plant-filter" class="btn btn-primary dropdown-toggle land-filter" data-toggle="dropdown" aria-expanded="false">
-              <!-- <input  type="button" value="พืช"> -->
+            <button id="plant-filter" class="btn btn-primary dropdown-toggle land-filter" data-toggle="dropdown"
+              aria-expanded="false">
               พืช
             </button>
             <div class="dropdown-menu" role="menu" id="plant-dropdown">
               <a class="dropdown-item" role="presentation" onClick="setFilterValueOnclick('plant','all')">ทั้งหมด</a>
             </div>
           </div>
-
         </div>
       </ul>
     </nav>
@@ -193,18 +197,71 @@
       </div>
       <!-- /.sidebar -->
     </aside>
-
     <!-- Content Wrapper. Contains page content -->
-    <div class="content-wrapper">
-      <div id="map"></div>
-      <div id="button-div">
-        <button class="btn btn-primary" id="addLandBtn" type="button" onclick="window.location.href = 'addland.html';">
-          เพิ่มที่ดิน
-        </button>
-      </div>
-      <div id="img-out"></div>
-      <div id="widget" style="width: 90px;">
-      </div>
+    <div class="content-wrapper" style="min-height: 300px;">
+      <!-- <section class="content-header">
+        <div class="row">
+          <div class="col-3">
+            <div class="dropdown" id="dropdown-main">
+              <button id="provice-filter" class="btn btn-primary dropdown-toggle land-filter" data-toggle="dropdown"
+                aria-expanded="false">
+                จังหวัด
+              </button>
+              <div class="dropdown-menu" role="menu" id="provice-dropdown">
+                <a class="dropdown-item" role="presentation"
+                  onClick="setFilterValueOnclick('province','all')">ทั้งหมด</a>
+              </div>
+            </div>
+          </div>
+          <div class="col-3">
+            <div class="dropdown" id="dropdown-main">
+              <button disabled id="district-filter" class="btn btn-primary dropdown-toggle land-filter"
+                data-toggle="dropdown" aria-expanded="false">
+                อำเภอ
+              </button>
+              <div class="dropdown-menu" role="menu" id="district-dropdown">
+                <a class="dropdown-item" role="presentation"
+                  onClick="setFilterValueOnclick('district','all')">ทั้งหมด</a>
+              </div>
+            </div>
+          </div>
+          <div class="col-3">
+            <div class="dropdown" id="dropdown-main">
+              <button id="land-name-filter" class="btn btn-primary dropdown-toggle land-filter" data-toggle="dropdown"
+                aria-expanded="false">
+                ที่ดิน
+              </button>
+              <div class="dropdown-menu" role="menu" id="land-dropdown">
+                <a class="dropdown-item" role="presentation" onClick="setFilterValueOnclick('land','all')">ทั้งหมด</a>
+              </div>
+            </div>
+          </div>
+          <div class="col-3">
+            <div class="dropdown" id="dropdown-main">
+              <button id="plant-filter" class="btn btn-primary dropdown-toggle land-filter" data-toggle="dropdown"
+                aria-expanded="false">
+                พืช
+              </button>
+              <div class="dropdown-menu" role="menu" id="plant-dropdown">
+                <a class="dropdown-item" role="presentation" onClick="setFilterValueOnclick('plant','all')">ทั้งหมด</a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section> -->
+      <section class="content">
+        <div id="map"></div>
+        <div id="button-div">
+          <button class="btn btn-primary" id="addLandBtn" type="button"
+            onclick="window.location.href = 'addland.html';">
+            เพิ่มที่ดิน
+          </button>
+        </div>
+        <div id="img-out"></div>
+        <div id="widget" style="width: 90px;">
+        </div>
+      </section>
+
     </div>
 
     <!--! LOADING MODAL -->
@@ -220,10 +277,8 @@
     </div>
     <!--! LOADING MODAL -->
     <!-- ./wrapper -->
+
     <script src="admin-lte/plugins/jquery/jquery.min.js"></script>
-
-    <!-- jQuery -->
-
     <!-- jQuery UI 1.11.4 -->
     <script src="admin-lte/plugins/jquery-ui/jquery-ui.min.js"></script>
     <!-- Resolve conflict in jQuery UI tooltip with Bootstrap tooltip -->
@@ -270,9 +325,7 @@
       async defer></script>
     <script src="js/showLandMain.js"></script>
     <script src="js/mainPageFunc.js"></script>
-    <!-- <script src="js/CalculatedMapArea.js"></script> -->
-
-
+    <script src="js/CalculatedMapArea.js"></script>
     <!-- PROPLANTE -->
 
 </body>
