--- a/public/login.html
+++ b/public/login.html
@@ -11,6 +11,7 @@
   <link rel="stylesheet" href="admin-lte/plugins/icheck-bootstrap/icheck-bootstrap.min.css">
   <link rel="stylesheet" href="admin-lte/dist/css/adminlte.min.css">
   <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Sarabun&display=swap" rel="stylesheet">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <link rel="stylesheet" href="admin-lte/build/fonts/fontawesome-all.min.css" />
   <link rel="stylesheet" href="admin-lte/build/fonts/ionicons.min.css" />
