--- a/public/addland.html
+++ b/public/addland.html
@@ -7,6 +7,8 @@
   <title>Proplante</title>
   <!-- Tell the browser to be responsive to screen width -->
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="icon" href="images/icon.png" type="image/icon type">
+
   <!-- Font Awesome -->
   <link rel="stylesheet" href="admin-lte/plugins/fontawesome-free/css/all.min.css">
   <!-- Ionicons -->
@@ -27,6 +29,8 @@
   <link rel="stylesheet" href="admin-lte/plugins/summernote/summernote-bs4.css">
   <!-- Google Font: Source Sans Pro -->
   <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Sarabun&display=swap" rel="stylesheet">
+
 
   <!-- PROPLANTE -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
@@ -48,7 +52,7 @@
           <form action="" id="search-location-form" class="search-form js-inline ml-3 mr-3">
             <div class="input-group input-group-sm" style="width:100%; margin-top: 10px;">
               <input id="map_search" autocomplete="off" class="form-control form-control-navbar" type="search"
-                placeholder="ค้นหาสถานที่" aria-label="Search" style="margin-top:0px; font-size: 1.4rem;">
+                placeholder="ค้นหาสถานที่" aria-label="Search" style="margin-top:0px; ">
               <div class="input-group-append" style="background-color: #F2F4F6;">
                 <button id="mapSearchBt" class="btn btn-navbar" type="submit">
                   <i class="fas fa-search"></i>
