--- a/public/addActivity.html
+++ b/public/addActivity.html
@@ -7,6 +7,8 @@
    <title>Proplante</title>
    <!-- Tell the browser to be responsive to screen width -->
    <meta name="viewport" content="width=device-width, initial-scale=1">
+   <link rel="icon" href="images/icon.png" type="image/icon type">
+
    <!-- Font Awesome -->
    <link rel="stylesheet" href="admin-lte/plugins/fontawesome-free/css/all.min.css">
    <!-- Ionicons -->
@@ -15,6 +17,8 @@
    <link rel="stylesheet" href="admin-lte/dist/css/adminlte.min.css">
    <!-- Google Font: Source Sans Pro -->
    <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700" rel="stylesheet">
+   <link href="https://fonts.googleapis.com/css?family=Sarabun&display=swap" rel="stylesheet">
+
 
    <!-- Daterange picker -->
    <link href="css/datepicker.css" rel="stylesheet" media="screen">
@@ -22,7 +26,6 @@
    <link href="//getbootstrap.com/2.3.2/assets/css/bootstrap-responsive.css" rel="stylesheet">
 
    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-   <script src="js/load-image.all.min.js"></script>
 
    <!-- Select2 -->
    <link rel="stylesheet" href="admin-lte/plugins/select2/css/select2.min.css">
@@ -149,6 +152,14 @@
                  </p>
                </a>
              </li>
+             <li>
+              <a href="license.html" class="nav-link" style="color: lightgrey;">
+                <i class="fas fa-copyright" id="nav-signout"></i>
+                <p>
+                  proplante
+                </p>
+              </a>
+            </li>
            </ul>
          </nav>
          <!-- /.sidebar-menu -->
