--- a/public/index.html
+++ b/public/index.html
@@ -52,7 +52,7 @@
       </ul>
       <ul class="navbar-nav ml-auto">
         <li class="nav-item">
-          <a class="nav-link" id="filterButton">
+          <a class="nav-link" id="filterButton" onclick="toggleFilter()">
             <i class="fa fa-filter"></i></a>
         </li>
         <div id="filterMainPageDiv">
@@ -191,6 +191,14 @@
                 </p>
               </a>
             </li>
+            <li>
+              <a href="license.html" class="nav-link" style="color: lightgrey;">
+                <i class="fas fa-copyright" id="nav-signout"></i>
+                <p>
+                  proplante
+                </p>
+              </a>
+            </li>
           </ul>
         </nav>
         <!-- /.sidebar-menu -->
@@ -199,58 +207,11 @@
     </aside>
     <!-- Content Wrapper. Contains page content -->
     <div class="content-wrapper" style="min-height: 300px;">
-      <!-- <section class="content-header">
-        <div class="row">
-          <div class="col-3">
-            <div class="dropdown" id="dropdown-main">
-              <button id="provice-filter" class="btn btn-primary dropdown-toggle land-filter" data-toggle="dropdown"
-                aria-expanded="false">
-                จังหวัด
-              </button>
-              <div class="dropdown-menu" role="menu" id="provice-dropdown">
-                <a class="dropdown-item" role="presentation"
-                  onClick="setFilterValueOnclick('province','all')">ทั้งหมด</a>
-              </div>
-            </div>
-          </div>
-          <div class="col-3">
-            <div class="dropdown" id="dropdown-main">
-              <button disabled id="district-filter" class="btn btn-primary dropdown-toggle land-filter"
-                data-toggle="dropdown" aria-expanded="false">
-                อำเภอ
-              </button>
-              <div class="dropdown-menu" role="menu" id="district-dropdown">
-                <a class="dropdown-item" role="presentation"
-                  onClick="setFilterValueOnclick('district','all')">ทั้งหมด</a>
-              </div>
-            </div>
-          </div>
-          <div class="col-3">
-            <div class="dropdown" id="dropdown-main">
-              <button id="land-name-filter" class="btn btn-primary dropdown-toggle land-filter" data-toggle="dropdown"
-                aria-expanded="false">
-                ที่ดิน
-              </button>
-              <div class="dropdown-menu" role="menu" id="land-dropdown">
-                <a class="dropdown-item" role="presentation" onClick="setFilterValueOnclick('land','all')">ทั้งหมด</a>
-              </div>
-            </div>
-          </div>
-          <div class="col-3">
-            <div class="dropdown" id="dropdown-main">
-              <button id="plant-filter" class="btn btn-primary dropdown-toggle land-filter" data-toggle="dropdown"
-                aria-expanded="false">
-                พืช
-              </button>
-              <div class="dropdown-menu" role="menu" id="plant-dropdown">
-                <a class="dropdown-item" role="presentation" onClick="setFilterValueOnclick('plant','all')">ทั้งหมด</a>
-              </div>
-            </div>
-          </div>
-        </div>
-      </section> -->
       <section class="content">
-        <div id="map"></div>
+        <div class="row" style="width: 100vw; margin-left:0px">
+          <div id="map"></div>
+          <div class="col-6 filter-mobile" style="display: none"></div>
+        </div>
         <div id="button-div">
           <button class="btn btn-primary" id="addLandBtn" type="button"
             onclick="window.location.href = 'addland.html';">
