--- a/public/plantPage.html
+++ b/public/plantPage.html
@@ -7,6 +7,8 @@
   <title>Proplante | จัดการพืช</title>
   <!-- Tell the browser to be responsive to screen width -->
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="icon" href="images/icon.png" type="image/icon type">
+
   <!-- Font Awesome -->
   <link rel="stylesheet" href="admin-lte/plugins/fontawesome-free/css/all.min.css">
   <!-- Ionicons -->
@@ -15,6 +17,8 @@
   <link rel="stylesheet" href="admin-lte/dist/css/adminlte.min.css">
   <!-- Google Font: Source Sans Pro -->
   <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Sarabun&display=swap" rel="stylesheet">
+
   <!-- PROPLANTE -->
   <link rel="stylesheet" href="css/loader-1.css">
   <link rel="stylesheet" href="css/addActivityPage.css">
@@ -158,6 +162,14 @@
                 </p>
               </a>
             </li>
+            <li>
+              <a href="license.html" class="nav-link" style="color: lightgrey;">
+                <i class="fas fa-copyright" id="nav-signout"></i>
+                <p>
+                  proplante
+                </p>
+              </a>
+            </li>
           </ul>
         </nav>
         <!-- /.sidebar-menu -->
@@ -236,7 +248,7 @@
             </div>
             <form role="form">
               <div class="form-group">
-                <p style="margin-bottom:0px">ชื่อพืช<span class="sp-require">&nbsp;*</span></p>
+                <p style="margin-bottom:1vh">ชื่อพืช<span class="sp-require">&nbsp;*</span></p>
                 <input autocomplete="off" required type="text" placeholder="ชื่อพืช เช่น มันสำปะหลัง" class="form-control"
                   id="inputPlantName">
               </div>
